<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.example.honeysonwani.localizationexample.LanguageActivity">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/first_line"
        android:padding="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_line"
        android:textSize="15dp"
        android:padding="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/third_line"
        android:textSize="15dp"
        android:padding="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fourth_line"
        android:textSize="15dp"
        android:padding="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fifth_line"
        android:padding="10dp"
        android:textSize="15dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sixth_line"
        android:textSize="15dp"
        android:padding="10dp"
        android:textStyle="bold"
        />
</LinearLayout>
